# batnotifsd

./: README.md  batnotifsd.py  battery-notifications.py  battery_notifications.py  flake.nix  pyproject.toml
src/batnotifsd/: batnotifsd.py
