# vim: set fenc=utf-8 ts=4 sw=0 sts=0 sr et si tw=0 fdm=marker fmr={{{,}}}:
[project]
name        = "batnotifsd"
version     = "20240911"
description = "A Python script that sends notifications about the battery's status (charger plugged in/unplugged, low/critical battery levels)."
authors     = [ { name="Andrei Dobrete", email="andy3153@protonmail.com" }, ]

readme          = "README.md"
requires-python = ">=3.12"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: No Input/Output (Daemon)",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: Window Managers",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Andy3153/batnotifsd"
Issues   = "https://github.com/Andy3153/batnotifsd/issues"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
